tests/expectations/parser/program/hex_eof.out
namespace = "Parse"
expectation = "Fail"
outputs = ["""
Error [EPAR0370005]: expected : -- found '='
    --> test:4:29
     |
   4 |     function main() { let a = 0x}
     |                             ^"""]
